--- a/Sem2/Metrics/PSets/PS3/PS3.qmd
+++ b/Sem2/Metrics/PSets/PS3/PS3.qmd
@@ -2,7 +2,7 @@
 title: Problem Set 3
 author: Tate Mason
 date: today
-output: pdf
+format: pdf
 ---
 
 # Question 1 - Hansen 3.16
@@ -174,7 +174,7 @@ cat("(f) Sum of squared residuals:", sum_resid_sq, "\n")
 
 # Question 4 - Hansen 4.6
 
-
+By the given constraint of linear estimators, $\tilde{\beta} = CY$ such that $C$ is a txp matrix of all constants. Variance can be computed via the following $var[\tilde{\beta}|X] = var[CY|X] = Cvar[Y|X]C^T = C\sigma^2CXC^T = \sigma^2CC^T$, following that $CX = I$ in the case of unbiasedness (Hansen 105). Now, using the Gauss-Markov theorem, $\hat{\beta} = (X^TX)^{-1}X^TY$ and $D = C-(X^TX)^{-1}X^t$. Via the definition $CX = I$, multiplying $D\times X$ yields $I = (X^TX)^{-1}X^TX$ and $DX = 0$. Now, we can infer $\tilde{\beta} = CY = [(X^TX)^{-1}X^T + D]Y = \hat{\beta}+DY$. Let's go back to variance: $var[\tilde{\beta}|X] = var[\hat{\beta}|X] + [DY|X] + 2cov[\hat{\beta}, DY|X]$. This can be expanded as follows $cov[\hat{\beta},DY|X] cov[(X^TX)^{-1}X^TY, DY|X] = (X^TX)^{-1}X^Tcov[Y,DY|X]$. Expanding further, $cov[Y,DY|X] = cov[X\beta + \epsilon, D(X\beta + \epsilon)|X] = Dcov[\epsilon,\epsilon|X] = D\sigma^2$. Thus, $cov[\hat{\beta}, DY|X] = \sigma^2(X^TX)^{-1}X^TD$. Since, as found before, $DX = 0$ it follows that $X^TD^T = 0$. Thus, $cov[\hat{\beta}, DY|X] = 0$. Therefore, $var[\tilde{\beta}|X] = var[\hat{\beta}|X] + var[DY|X] = \sigma^2(X^TX)^{-1} + \sigma^2DD^T$. $DD^T$ is positive semi-definite, therefore $var[\tilde{\beta}|X] \geq \sigma^2(X^TX)^{-1} = \sigma^2(X^T\Sigma^{-1}X)^{-1}$. In the text, in the case of linear estimation, $\Sigma = I$, thus our findings prove the given inequality.
 
 # Question 5 - Hansen 7.7
 
