--- a/Sem2/Micro/PSets/PS4/PS4.tex
+++ b/Sem2/Micro/PSets/PS4/PS4.tex
@@ -77,4 +77,14 @@
       \item[(d)] A fixed-contribution mechanism is one which provides a public good if and only if each agent $i$ is willing to contributed $c_i$, where $c_1 + c_2 = c$. Show that any mechanism considered in (c) is equivalent to a randomized fixed-contribution mechanism.
   \end{enumerate}
 
+\section*{Solution 1}
+  \subsection*{Part (A)}
+  To be dominant incentive compatible is to be strategy proof. This is otherwise stated as the mechanism is optimal for an agent no matter the moves of others. 
+
+  Consider the case of the second-price auction. It is weakly dominant to bid truthfully $\mathbb{E}[v_i-t_i|\theta_{-i}]$. In the case of it being DIC, the IC is instead $\mathbb{E}[v_i-t_i|\theta_{i}]$, or your bid, as in the case of a second price auction, only depends on your own private value.
+  \subsection*{Part (B)}
+  \begin{proof}
+
+  \end{proof}
+
 \end{document}
