--- a/Sem2/Micro/PSets/PS5/PS5.tex
+++ b/Sem2/Micro/PSets/PS5/PS5.tex
@@ -74,8 +74,14 @@
 
 \section*{Solution 1}
   \subsection*{Part (a)}
-       
-
+    The efficient allocation rule is as follows:
+    \begin{gather*}
+      x(\theta_1,\theta_2) = \begin{cases}
+        1, & if \ \sum\limits_{i=1}^2v_i(\theta_i,\theta_{-i})\geq\frac{3}{4}, \\
+        0, & otherwise
+      \end{cases}
+    \end{gather*}
+  \subsection*{Part (b)}
 \section*{Solution 2}
 
 \section*{Solution 3}
