--- a/Sem2/Micro/PSets/PS5/PS5.tex
+++ b/Sem2/Micro/PSets/PS5/PS5.tex
@@ -83,7 +83,11 @@
     \end{gather*}
   \subsection*{Part (b)}
 \section*{Solution 2}
+  \subsection*{Part (a)}
+    Attention can be restricted to direct mechanisms because there is no incentive to lie about marginal product. 
 
+  \subsection*{Part (b)}
+    
 \section*{Solution 3}
   \subsection*{Part (a)}
     Yes, they are incentivized to choose truthfully. Because we assume the randomization is "fair", there is no incentive to strategize. This is due to the efficiency and Pareto optimality of an RSD with strict preferences.
